tests/ui/lint/snapshots/unchanging_loop_condition_task_return.snap
---
source: tests/ui/lint/mod.rs
---
  ✕ Loop condition never changes
   ╭─[test.lis:4:9]
 3 │   let n = 5;
 4 │   while n < 10 {
   ·         ───┬──
   ·            ╰── the loop either never runs or never ends
 5 │     task { return }
   ╰────
  help: Nothing in the loop body changes this condition. Did you forget to update a variable, or mean to `break` out of the loop? · code: [infer.unchanging_loop_condition]
