tests/ui/lint/snapshots/unchanging_loop_condition_try_scoped_propagate.snap
---
source: tests/ui/lint/mod.rs
---
  ✕ Loop condition never changes
   ╭─[test.lis:6:9]
 5 │   let n = 5;
 6 │   while n < 10 {
   ·         ───┬──
   ·            ╰── the loop either never runs or never ends
 7 │     let _ = try { may_fail()? }
   ╰────
  help: Nothing in the loop body changes this condition. Did you forget to update a variable, or mean to `break` out of the loop? · code: [infer.unchanging_loop_condition]
