tests/ui/lint/snapshots/unconditional_recursion_after_defer_block.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Unconditional recursion
    ╭─[test.lis:10:3]
  9 │   }
 10 │   descend(n)
    ·   ─────┬────
    ·        ╰── recurses on every path
 11 │ }
    ╰────
  help: `descend` always calls itself, so it overflows the stack instead of returning. Add a base case that returns without recursing · code: [lint.unconditional_recursion]
