tests/ui/lint/snapshots/unconditional_recursion_after_straight_line_statements.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Unconditional recursion
   ╭─[test.lis:4:3]
 3 │   let half = n / 2
 4 │   shrink(half)
   ·   ──────┬─────
   ·         ╰── recurses on every path
 5 │ }
   ╰────
  help: `shrink` always calls itself, so it overflows the stack instead of returning. Add a base case that returns without recursing · code: [lint.unconditional_recursion]
