tests/ui/lint/snapshots/unconditional_recursion_after_task.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Unconditional recursion
   ╭─[test.lis:8:3]
 7 │   task cleanup()
 8 │   descend(n - 1)
   ·   ───────┬──────
   ·          ╰── recurses on every path
 9 │ }
   ╰────
  help: `descend` always calls itself, so it overflows the stack instead of returning. Add a base case that returns without recursing · code: [lint.unconditional_recursion]
