tests/ui/lint/snapshots/unconditional_recursion_all_match_arms.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Unconditional recursion
   ╭─[test.lis:4:10]
 3 │   match n {
 4 │     0 => wander(1),
   ·          ────┬────
   ·              ╰── recurses on every path
 5 │     _ => wander(n - 1),
   ╰────
  help: `wander` always calls itself, so it overflows the stack instead of returning. Add a base case that returns without recursing · code: [lint.unconditional_recursion]
