tests/ui/lint/snapshots/unconditional_recursion_both_if_branches.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Unconditional recursion
   ╭─[test.lis:3:14]
 2 │ fn wander(n: int) -> int {
 3 │   if n > 0 { wander(n - 1) } else { wander(n + 1) }
   ·              ──────┬──────
   ·                    ╰── recurses on every path
 4 │ }
   ╰────
  help: `wander` always calls itself, so it overflows the stack instead of returning. Add a base case that returns without recursing · code: [lint.unconditional_recursion]
