tests/ui/lint/snapshots/unconditional_recursion_for_iterable.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Unconditional recursion
   ╭─[test.lis:3:15]
 2 │ fn limit(n: int) -> int {
 3 │   for i in 0..limit(n) {
   ·               ────┬───
   ·                   ╰── recurses on every path
 4 │     let _ = i
   ╰────
  help: `limit` always calls itself, so it overflows the stack instead of returning. Add a base case that returns without recursing · code: [lint.unconditional_recursion]
